--- a/pagePortifolio/index.html
+++ b/pagePortifolio/index.html
@@ -29,6 +29,8 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <!-- ScrollReveal -->
+  <script src="https://unpkg.com/scrollreveal"></script>
 
 </head>
 
@@ -45,9 +47,11 @@
         <img src="assets/img/avatartopBG.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">DevDaviRV</a></h1>
         <div class="social-links mt-3 text-center">
-          <a title="Instagram" href="https://www.instagram.com/dev_davirv/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a title="Instagram" href="https://www.instagram.com/dev_davirv/" class="instagram"><i
+              class="bx bxl-instagram"></i></a>
           <a title="GitHub" href="https://github.com/DevDaviRV" class="twitter"><i class="bx bxl-github"></i></a>
-          <a title="Linkedin" href="https://www.linkedin.com/in/devdavirv/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a title="Linkedin" href="https://www.linkedin.com/in/devdavirv/" class="linkedin"><i
+              class="bx bxl-linkedin"></i></a>
           <a title="DDRV - StudioTech" href="../index.html" class="site"><i class="bx bi bi-globe"></i></a>
         </div>
       </div>
@@ -88,7 +92,7 @@
               href="index.html"> (DDRV - StudioTech)</a>
             , sou um profissional dedicado e apaixonado pelo que faço, com uma forte atenção aos detalhes e um
             compromisso com a entrega de projetos de qualidade.
-            .</p>
+          </p>
         </div>
 
         <div class="row">
@@ -97,15 +101,14 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Desenvolvedor Web.</h3>
-            <p class="fst-italic">
-              aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.ddrvstudio.tech</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Tel:</strong> <span>(35) 9-99730-2235</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Tel:</strong><a title="Enviar mensagem por whatsapp."
+                      href="https://api.whatsapp.com/send?phone=5535997302235&text=Olá,%20vim%20pelo%20Portfólio."><span>(35)
+                        9-****-2235</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Itajubá, MG</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Instagram:</strong>
                     <span>instagram.com/dev_davirv/</span>
@@ -116,7 +119,8 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Formação:</strong> <span>Superior Incompleto</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dev.davirv01@gmail.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong><a title="Enviar email diretamente."
+                      href="mailto:devdavirv01@gmail.com"><span>dev.davirv01@gmail.com</span></a>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponível</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Contratação:</strong> <span>Disponível</span></li>
@@ -125,9 +129,11 @@
             </div>
             <p>
               Sou um Desenvolvedor Web com habilidades em HTML, CSS, JavaScript, Bootstrap e ReactJS.
-              Sou capaz de criar sites e aplicativos web atraentes, responsivos e funcionais. Além disso, tenho experiência em trabalhar com o NodeJS para criar aplicativos
-              web de back-end de alto desempenho. Estou comprometido com a entrega de projetos de alta qualidade e estou
-              ansioso para trabalhar em sua equipe.
+              Sou capaz de criar sites e aplicativos web atraentes, responsivos e funcionais. Além disso, tenho
+              experiência em trabalhar com o NodeJS para criar soluções
+              back-end. Estou comprometido com a entrega de projetos de alta qualidade e estou
+              ansioso para trabalhar em sua equipe. <br>
+
             </p>
           </div>
         </div>
@@ -143,10 +149,38 @@
 
         <div class="section-title">
           <h2>Habilidades</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+
+          <div id="parts-habilidades">
+            <h4> <b>Tecnologias:</b></h4>
+            <div class="partHab">
+              <span id="icon1"><i title="JAVASCRIPT" class=" iconsb bi bi-filetype-js"></i></span>
+              <span id="icon2"><i title="CSS3" class=" iconsb bi bi-filetype-css"></i></span>
+              <span id="icon3"><i title="HTML5" class=" iconsb bi bi-filetype-html"></i></span>
+              <span id="icon4"><i title="BOOTSTRAP" class=" iconsb bi bi-bootstrap"></i></span>
+              <span id="icon5"><i title="REACT JS" class=" iconsb bi"><img style="width: 4.5rem; height:4.5rem;"
+                    src="/pagePortifolio/assets/img/structure (1).png" alt=""></i></span>
+              <span id="icon6"><i title="NODE JS" class=" iconsb kjk bi"><img style="width: 4.5rem; height:4.5rem;"
+                    src="/pagePortifolio/assets/img/node.svg" alt=""></i></span>
+              <span id="icon7"><i title="GITHUB" class=" iconsb bi bi-github"></i></span>
+              <span id="icon8"><i title="GIT" class=" iconsb biw bi-git"></i></span>
+              <!-- <i class=" iconsb bi bi-pencil-square"></i> -->
+            </div>
+            <div class="line-hab"></div>
+            <h4><b>Diferenciais:</b></h4>
+            <div class="difHab">
+
+              <ul id="listHab">
+                <li class="dif1">Inglês Intermediário.</li>
+                <li class="dif2">Produtivo.</li>
+                <li class="dif3">Boa Comunicaçao.</li>
+                <li class="dif4">Organizado.</li>
+                <li class="dif5">Proativo.</li>
+                <li class="dif6">Buscando Conhecimento.</li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </div>
 
 
     </section><!-- End Skills Section -->
@@ -157,9 +191,7 @@
 
         <div class="section-title">
           <h2>Currículo</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p style="font-size: 1.2rem;">Confira minha trajetória ate aqui.</p>
         </div>
 
         <div class="row">
@@ -167,9 +199,10 @@
             <h3 class="resume-title">Sobre</h3>
             <div class="resume-item pb-0">
               <h4>Davi Vianna</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
+              <p><em>Desenvolvedor Web FullStack e entusiasta em tecnologia.
+                  Interessado em atuar com equipes em ambientes de desenvolvimento para gerar valor entregando trabalho
+                  de qualidade e adquirindo conhecimento necessário para os objetivos da empresa e crescimento
+                  profissional.</em></p>
               <ul>
                 <li>Itajuba - Minas Gerias</li>
                 <li>(35) 9-99730-2235</li>
@@ -187,38 +220,40 @@
             <div class="resume-item">
               <h4>Certificações &amp; Cursos</h4>
               <h5>2020 - 2022</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-                unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                dila</p>
+              <ul>
+                <li>CC50 - Ciência da computação (Curso de Harvard por Fundação Estudar).</li>
+                <li>Desenvolvedor Web FullStack (Programador BR).</li>
+                <li>BOOTCAMP XP - Desenvolvimento Web (XP Educação).</li>
+                <li>BOOTCAMP OBC - E-commerce e Mobile (One Bit Code).</li>
+              </ul>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Experiência</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>DESENVOLVEDOR WEB </h4>
+              <h5>2021 - Até o momento</h5>
+              <p><em><b>DDRV - StudioTech.</b> Itajubá, MG</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production
-                  communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the
-                  project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the
-                  design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Desenvolvendo Sites e Sistemas Web para clientes tanto no FRONT-END como no BACK-END, utilizando
+                  tecnologias
+                  como: HTML, CSS, JAVASCRIPT, BOOTSTRAP, NODE JS e consumindo API's.</li>
+                <li>Proprietário Autonômo lidando com todas as operações da Agência. Aplicando principalmente
+                  habilidades em Desenvolvimento, Design, Marketing, e Gestão. </li>
+                <li>Desenvolvendo Sistema de Gestão de cliníca, e-ccomerce, Websites, Dashboards e dAPP em Web3</li>
+                <li>Versionamento GIT/GITHUB e SEO seguindo boas práticas para um bom ranquiamento nos motores de busca.
+                </li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Designer de Anúncios </h4>
+              <h5>2019 - 2020</h5>
+              <p><em><b>Flash Store.</b> Itajuba, MG</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and
-                  advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Desenvolvi diversos templates para anúncios, promoções e produtos.</li>
+                <li>Teste de Prospecção e conversão em anúncios lançados na plataforma.</li>
+                <li>Estrutura de Posts para campanhas e identidade gráfica para produtos e rede social.</li>
+                <li>Edição de Fotos e videos, utilizando ferramentas como: Photoshop e Canva.</li>
               </ul>
             </div>
           </div>
@@ -233,18 +268,17 @@
 
         <div class="section-title">
           <h2>Portfólio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Veja meu trabalho, estarei sempre atualizando e trazendo mais novidades. Projetos realizados para clientes
+            e também para uso pessoal/demonstração em portfólio.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter="*" class="filter-active">Todos</li>
               <li data-filter=".filter-app">Sites</li>
               <li data-filter=".filter-card">Web-App</li>
-              <li data-filter=".filter-web">IA Design</li>
+              <li data-filter=".filter-web">IA / UI Design</li>
             </ul>
           </div>
         </div>
@@ -258,7 +292,7 @@
                 <a href="assets/img/site1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Site para agencia de desenvolvimento. Tecnologias: JS CSS HTML BOOTSTRAP"><i
                     class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+
               </div>
             </div>
           </div>
@@ -269,7 +303,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/iart.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Demonstração de design utilizando inteligência artificial"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+
               </div>
             </div>
           </div>
@@ -280,7 +314,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/site2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Site Desenvolvido para empresa do ramo de construção"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+
               </div>
             </div>
           </div>
@@ -295,7 +329,7 @@
                   data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Sistema de gestão de cliníca. Tecnologias: JavaScript, CSS, BootStrap, NodeJS (ainda em desenvolvimento)"><i
                     class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+
               </div>
             </div>
           </div>
@@ -306,7 +340,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/iart2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Demonstração de design utilizando inteligência artificial"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+
               </div>
             </div>
           </div>
@@ -317,7 +351,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/site3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Site desenvolvido para empresa do ramo de Comercio/Restaurante"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+
               </div>
             </div>
           </div>
@@ -335,9 +369,8 @@
 
         <div class="section-title">
           <h2>Serviços</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Ofereço serviços de desenvolvimento de qualidade e soluções personalizadas para atender às
+            necessidades de cada cliente. Conheça alguns dos meus serviços:</p>
         </div>
 
         <div class="row">
@@ -367,14 +400,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-wrench-adjustable"></i></div>
             <h4 class="title"><a href="">Manutenção e Atualização.</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-              voluptatum deleniti atque</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
-              soluta nobis est eligendi</p>
+            <p class="description">Recontrução e Atualização de Interfaces ou Funcionalidades.</p>
           </div>
         </div>
 
@@ -389,9 +415,13 @@
 
         <div class="section-title">
           <h2>Contato</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Agradeço a oportunidade de apresentar meu trabalho e espero ter conseguido transmitir minha paixão pela
+            tecnologia e pelo desenvolvimento de software. Espero que tenham gostado do meu portfólio e ficarei muito
+            feliz em poder discutir minhas experiências e habilidades com mais detalhes em uma entrevista.
+            <br>
+            Atenciosamente,
+            Davi.
+          </p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -405,15 +435,20 @@
               </div>
 
               <div class="email">
-                <i class="bi bi-envelope"></i>
+                <A href="mailto:devdavirv01@gmail.com"><i class="bi bi-envelope"></i></A>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <A href="mailto:devdavirv01@gmail.com">
+                  <p>Enviar email diretamente.</p>
+                </A>
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Tel:</h4>
-                <p>+55 (35) 9-99730-2235</p>
+                <a href="https://api.whatsapp.com/send?phone=5535997302235&text=Olá,%20vim%20pelo%20Portfólio."><i
+                    class="bi bi-phone"></i></a>
+                <h4>Telefone:</h4>
+                <a href="https://api.whatsapp.com/send?phone=5535997302235&text=Olá,%20vim%20pelo%20Portfólio.">
+                  <p>Entrar em contato via WhatsApp.</p>
+                </a>
               </div>
 
               <iframe
@@ -497,6 +532,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+
 
 
   <!-- Template Main JS File -->
